k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  # Annotations are additional config options
  # that are going to specify higher level config
  # around the Ingress object that gets created.
  annotations:
    # The following config rule tells K8s that we 
    # want to create a Ingress controller based
    # on the nginx project
    kubernetes.io/ingress.class: nginx
    # The following config rule configures how our
    # copy of nginx behaves.
    # In this case, it tells Ingress to rewrite the
    # requested route, so that /api transforms to /
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
      - http:
          paths:
            - path: /?(.*)
              backend: 
                serviceName: client-cluster-ip-service
                servicePort: 3000
            - path: /api/?(.*)
              backend:
                serviceName: server-cluster-ip-service
                servicePort: 5000
